# rotate-screen

./: .travis.yml  Main.hs  Orientation.hs  UdevAccelerometer.hs  rotate-screen.cabal  rotate.hs  rotation.hs
