name:                rotate-screen
version:             0.1
synopsis:            Rotate a screen via xrandr from accelerometer readings.
-- description:         
homepage:            http://github.com/LeifW/rotate-screen
license:             GPL-3
license-file:        LICENSE
author:              Leif Warner
maintainer:          abimelech@gmail.com
copyright:           2018
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable rotate-screen
  main-is:             Main.hs
  other-modules:       Orientation, UdevAccelerometer
  build-depends:       base >=4.10 && <4.11,
                       udev,
                       IntervalMap >=0.5 && <0.6,
                       mtl,
                       bytestring,
                       text,
                       unix,
                       lifted-base,
                       filepath,
                       typed-process
  default-language:    Haskell2010
